# YearMaps

./: .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py  yearmaps.example.yml
.github/workflows/: docker.yml  publish.yml  pylint.yml
frontend/: .env  .gitattributes  package.json
frontend/public/: manifest.json
frontend/src/: App.css  App.tsx  Custom.css  Utils.ts  index.css
tests/: test_providers.py
yearmaps/: __main__.py  cli.py  constant.py  script.py  server.py  utils.py
yearmaps/data/: __init__.py  data_class.py
yearmaps/impl/: provider.py  task.py
yearmaps/interface/: provider.py  task.py
yearmaps/provider/: BBDCProvider.py  BilibiliProvider.py  CodeforcesProvider.py  GitHubProvider.py  MiFitProvider.py  __init__.py
yearmaps/providers/: BBDCProvider.py  BilibiliProvider.py  CodeforcesProvider.py  GitHubProvider.py  __init__.py
yearmaps/utils/: colormap.py  colors.py  error.py  file.py  renderer.py  util.py
