[tool.poetry]
name = "yearmaps"
version = "0.0.4"
description = "Generate heat map of a year."
authors = ["Zxilly <zxilly@outlook.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.27.1"
click = "^8.0.3"
matplotlib = "^3.5.1"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
